Fixed image size issue. Changed page title. Added main header. Fixed alignment of headers.

--- a/Documents/Hobbies/Hack/polling/client/app.css
+++ b/Documents/Hobbies/Hack/polling/client/app.css
@@ -8,10 +8,15 @@ body  {
   justify-content:center;
 }
 .poll   {
-  width:25%;
+  width:100%;
   margin:20px;
 }
 
 .poll-image {
   width:100%;
+  height:
+}
+
+h1,h3 {
+  text-align: center;
 }
